# dist-train

./: Dockerfile  README.md  access-model.yaml  data-ingestion.py  multi-worker-distributed-training.py  multi-worker-tfjob.yaml  pyproject.toml  workflow.yaml
manifests/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  kustomization.yaml
manifests/crds/: kustomization.yaml  tfjobs.yaml
